--- a/vue-webpack-todo/package.json
+++ b/vue-webpack-todo/package.json
@@ -21,8 +21,10 @@
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.3",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.0",
     "stylus": "^0.54.5",
