--- a/node-mongodb/package.json
+++ b/node-mongodb/package.json
@@ -13,6 +13,8 @@
     "express": "^4.16.4",
     "jade": "^1.11.0",
     "moment": "^2.22.2",
-    "mongoose": "^5.3.7"
+    "mongoose": "^5.3.7",
+    "multer": "^1.4.1",
+    "underscore": "^1.9.1"
   }
 }
