--- a/node-mongodb/package.json
+++ b/node-mongodb/package.json
@@ -2,12 +2,12 @@
   "name": "mongodb",
   "version": "1.0.0",
   "description": "node-mongodb",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Niu Yi",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
