--- a/node-mongodb/package.json
+++ b/node-mongodb/package.json
@@ -9,12 +9,19 @@
   "author": "Niu Yi",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "grunt": "^1.0.3",
     "jade": "^1.11.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.7",
     "multer": "^1.4.1",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-nodemon": "^0.5.4",
+    "grunt-contrib-watch": "^1.1.0"
   }
 }
