--- a/node-mongodb/package.json
+++ b/node-mongodb/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
+    "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
