--- a/travel/project/package.json
+++ b/travel/project/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "ajv": "^6.6.1",
     "fastclick": "^1.0.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2"
   },
