--- a/travel/project/package.json
+++ b/travel/project/package.json
@@ -13,6 +13,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
