--- a/travel/project/package.json
+++ b/travel/project/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ajv": "^6.6.1",
     "axios": "^0.18.0",
+    "better-scroll": "^1.13.2",
     "fastclick": "^1.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
