--- a/travel/project/package.json
+++ b/travel/project/package.json
@@ -16,7 +16,8 @@
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
     "vue-awesome-swiper": "^2.6.7",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
