--- a/music/package.json
+++ b/music/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "music",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,26 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ajv": "^6.6.1",
-    "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "better-scroll": "^1.13.2",
-    "fastclick": "^1.0.6",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "vue": "^2.5.17",
-    "vue-awesome-swiper": "^2.6.7",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vue": "^2.5.22"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17"
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
     "root": true,
