--- a/music/package.json
+++ b/music/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "better-scroll": "^1.14.1",
     "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.22",
