--- a/music/package.json
+++ b/music/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.14.1",
     "fastclick": "^1.0.6",
@@ -15,6 +16,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.22",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
