--- a/music/package.json
+++ b/music/package.json
@@ -11,13 +11,15 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.14.1",
+    "body-parser": "^1.18.3",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.22",
     "vue-lazyload": "^1.2.6",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
