--- a/music/package.json
+++ b/music/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
