--- a/music/package.json
+++ b/music/package.json
@@ -16,6 +16,7 @@
     "fastclick": "^1.0.6",
     "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.22",
