--- a/music/package.json
+++ b/music/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.1.0",
     "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
     "lyric-parser": "^1.0.1",
